--- a/src/app/modules/home/filter-form/filter-form.component.html
+++ b/src/app/modules/home/filter-form/filter-form.component.html
@@ -2,15 +2,23 @@
   <div class="row cust-grid ">
     <div class="col-12 col-sm-6 col-md-6 col-lg-4">
       <div class="form-group">
-        <input type="text" class="form-control" formControlName="city" [(ngModel)]="searchService.city" placeholder="Enter city">
+        <select class="form-control" id="form58" formControlName="state" (change)="changeState($event)" class="browser-default custom-select">
+          <!-- <option value="" disabled>Select State</option> -->
+          <option *ngFor="let item of searchService.stateList" [value]="item.name">
+             {{ item?.name }}
+          </option>
+        </select>
+        <small>Enter State</small>
+        <!-- <input type="text" class="form-control" formControlName="city" [(ngModel)]="searchService.city" placeholder="Enter city"> -->
         </div>
     </div>
     <!--  -->
 
     <div class="col-12 col-sm-6 col-md-6 col-lg-4 text-center">
       
-      <div class="form-group">
+      <div class="form-group text-left">
         <div class="input-group">
+        <!-- <label>From - To</label> -->
           <input angular-mydatepicker name="mydate" formControlName="range" [(ngModel)]="searchService.range"
           class="form-control"  (ngModelChange)="changeRange($event)"
           [options]="myOptions" #dp="angular-mydatepicker"/>
@@ -20,12 +28,15 @@
             </button>
           </div>
         </div>
+        <small>From - To</small>
       </div>
     </div>
 
     <div class="col-6 col-sm-8 col-md-7 col-lg-2">
       <div class="form-group">
+        <!-- <label>People</label> -->
         <input type="number" class="form-control" formControlName="noOfPeople" [(ngModel)]="searchService.noOfPeople" placeholder="people">
+        <small>No. of People</small>
       </div>
     </div>
     <!--  -->
