--- a/src/app/modules/tourists/pages/search-result-page/search-result-page.component.html
+++ b/src/app/modules/tourists/pages/search-result-page/search-result-page.component.html
@@ -148,6 +148,26 @@
         <div class="row my-lg-2">
             <div class="col-lg-12">
                 <!-- Default unchecked -->
+                <div class="mb-0"><b>CITIES</b></div>
+                <hr class="px-3 py-0 ml-0 my-0 mb-2" style="width:50%; border-top: 1px solid deeppink;">
+
+                <div *ngIf="cityMore">
+                    <mdb-checkbox *ngFor="let city of searchService.cityList | slice:0:15" [checked]="getCities(city.name)"
+                    [value]="city.name" (change)="changeCity($event)" [default]="true">{{ city.name }}</mdb-checkbox>
+                    <p class="my-2 text-info cursor" (click)="moreLessCity()">More+</p>
+                </div>
+                <div *ngIf="!cityMore">
+                    <mdb-checkbox *ngFor="let city of searchService.cityList" [checked]="getCities(city.name)"
+                    [value]="city.name" (change)="changeCity($event)" [default]="true">{{ city.name }}</mdb-checkbox>
+                    <p class="my-2 text-info cursor" (click)="moreLessCity()">Less-</p>
+                </div>
+
+            </div>
+        </div>
+        
+        <div class="row my-lg-2">
+            <div class="col-lg-12">
+                <!-- Default unchecked -->
                 <div class="mb-0"><b>INTERESTS</b></div>
                 <hr class="px-3 py-0 ml-0 my-0 mb-2" style="width:50%; border-top: 1px solid deeppink;">
 
