--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
 
         <button type="button" (click)="open(rating)" *ngIf="userService.getRole() === 'tourist'"
            routerLinkActive="router-link-active"
-          mdbBtn size="sm" color="primary" class="relative waves-light" mdbWavesEffect>
+          mdbBtn size="sm" color="primary" class="relative waves-light" [disabled]="getEndDate(onGoingEvents[0])" mdbWavesEffect>
           Completed
         </button>
       </div>
@@ -155,9 +155,9 @@
       </div>
       <div class="col">
         <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light"
-          *ngIf="userService.getRole() === 'tourist'" (click)="open(rating)"
-         mdbWavesEffect>
-        Completed!&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
+          *ngIf="userService.getRole() === 'tourist'" (click)="open(rating)"  [disabled]="getEndDate(onGoingEvents[0])"
+          mdbWavesEffect>
+          Completed!&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
       </div>
     </div>
 </ng-template>
