--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -2,11 +2,9 @@
   <div class="text-white text-center py-5 px-4 my-5">
     <div>
       <img class="img-fluid card-title pt-3 mb-5 font-bold" src="../../../../assets/images/areoplane white.png" alt="">
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Voila an social guide and Tours booking Paltform</strong></h2>
-      <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam,
-        voluptatem,
-        optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
-        dolorum!
+      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>A local guide hiring platform </strong></h2>
+      <p class="mx-5 mb-5">Nobody knows a location better than its local residents.
+        Voila is an app which harnesses the same fact and connects a traveller to his/her compatible guide who shares interests like food, history, architecture, etc. so that the travelling experience can become even better while giving a significant boost to freelancing opportunities in the tourism industry.
       </p>
     </div>
   </div>
