search text filter

--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -190,7 +190,7 @@
              Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
         </div>
         <div class="col">
-            <button type="button" mdbBtn color="secondary" [disabled]="disableStart(data)"
+            <button type="button" mdbBtn color="secondary" [disabled]="disableStart(selectedBooking)"
             size="sm" class="waves-light btn-block" mdbWavesEffect>Start Tour&nbsp;</button>
         </div>
     </div>
