--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -14,10 +14,7 @@
     <div>
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Meet Your developers</strong></h2>
       <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>The Decoits 3.0</strong></h2>
-      <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam,
-        voluptatem,
-        optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
-        dolorum!
+      <p class="mx-5 mb-5">We are a bunch of nerds from Earth C-137 who are mad about the product we develop. Focused on finding a solution that actually works and can be applied to the industry right off the bat. Rigorous Brainstorming before taking any decision forward, making an app with a detailed thought behind every user experience are some of our general practices.
       </p>
  </div>
     </div>
