--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.scss
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Neuton:ital@1&display=swap');
+.card input{
+  font-family: 'Neuton', serif !important;
+}
 .pannel{
     margin: auto;
     width: 80%;
