--- a/src/app/modules/home/map/map.component.scss
+++ b/src/app/modules/home/map/map.component.scss
@@ -6,11 +6,15 @@
 // }
 .state{
     fill: #ffffff;
-    stroke: rgb(56,50,48);
+    stroke: rgb(0, 0, 0);
     white-space: nowrap;
 }
 .state:hover{
-    fill: #000000;
+    fill: #383230;
+    text-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+.state:disabled{
+  fill: green;
 }
 .map-detail{
     text-align: center;
@@ -22,7 +26,7 @@
     color: white;
 }
 .row{
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(180deg, rgba(56,50,48,1) 0%, rgba(255,255,255,1) 100%);
   margin: 0;
 }
 // .col-md-6{
