--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="page-footer font-small" style="background: #553d67;">
 
-  <div style="background-color: #f76c6c;">
+  <div style="background-color: #01c271;">
     <div class="container">
 
       <!-- Grid row-->
