--- a/src/app/modules/home/map/map.component.scss
+++ b/src/app/modules/home/map/map.component.scss
@@ -4,29 +4,30 @@
 //     width: 100%;
 //     height: 100%;
 // }
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pacifico&display=swap');
+
 .state{
     fill: #ffffff;
-    stroke: rgb(0, 0, 0);
+    stroke: #32233b ;
     white-space: nowrap;
 }
 .state:hover{
-    fill: #383230;
-    text-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    fill: #453252 ;
 }
-.state:disabled{
-  fill: green;
-}
+
 .map-detail{
+  font-family: 'Bebas Neue', cursive;
     text-align: center;
     position: relative;
     top: 50%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color:#453252 ;
 }
 .row{
-  background: linear-gradient(180deg, rgba(56,50,48,1) 0%, rgba(255,255,255,1) 100%);
+  // background: linear-gradient(to bottom, rgba(152, 226, 195, 0.925) 0%, #453252 100%);
+  background:rgba(182, 224, 207, 0.925);
   margin: 0;
 }
 // .col-md-6{
